package model.effects;

public enum Condition {
    NONE, POISON, GREAT_HEAL, SMALL_HEAL, IRON_SKIN, PARALYSIS, CRUSHING, GREAT_WALL;
}
